--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,6 +15,7 @@ jobs:
           $LatestTag = git describe --tags --abbrev=0 --match=[0-9]*.[0-9]*.[0-9]* 2>$null
           if ($LASTEXITCODE -ne 0) {
             $LatestTag = ""
+            $global:LASTEXITCODE = 0
           }
           $VersionXmlContent = Get-Content -Path "version.xml" -Raw
           $Version = [regex]::Match($VersionXmlContent, '<Version>(\d+\.\d+\.\d+)</Version>').Groups[1].Value
