--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -51,12 +51,14 @@ jobs:
         env:
           TOKEN_APPLICATION_VERSION: "${{ needs.extract-version.outputs.turnierplan_version }}"
       - name: Login to container registry
+        if: ${{ github.repository == 'turnierplan-NET/turnierplan.NET' }}
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Build and push container image'
+        if: ${{ github.repository == 'turnierplan-NET/turnierplan.NET' }}
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: .
@@ -64,6 +66,13 @@ jobs:
           push: true
           # Note: Always push "latest" even when building from a non-main branch. This is because currently, no patches are released for a non-latest minor release.
           tags: 'ghcr.io/turnierplan-net/turnierplan:latest,ghcr.io/turnierplan-net/turnierplan:${{ needs.extract-version.outputs.turnierplan_version }}'
+      - name: 'Build container image (no push for forks)'
+        if: ${{ github.repository != 'turnierplan-NET/turnierplan.NET' }}
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        with:
+          context: .
+          file: ./docker/turnierplan-amd64/Dockerfile
+          push: false
 
   nuget-package:
     name: 'Build NuGet package'
@@ -83,6 +92,7 @@ jobs:
         run: 'dotnet pack Turnierplan.Adapter/Turnierplan.Adapter.csproj -c Release -o .'
         working-directory: './src'
       - name: 'Push to NuGet'
+        if: ${{ github.repository == 'turnierplan-NET/turnierplan.NET' && secrets.NUGET_API_KEY != '' }}
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
         run: 'dotnet nuget push ./*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate'
